Fix hidden video rendering to also work on mobile

--- a/styles.css
+++ b/styles.css
@@ -167,8 +167,8 @@ input[type="checkbox"]:focus {
 }
 
 #streamsContainer video {
-    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
     position: absolute;
-    height: 1px;
-    width: 1px;
+    z-index: -100;
 }
